--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       border: 2px solid #aa682c;
       color: #231709;
     }
+    .social-btn {
+      background: #2d3748;
+      color: #fff;
+    }
+    .social-btn:hover {
+      background: #1a202c;
+    }
     img {
       display: block;
       max-width: 200px;
@@ -60,17 +67,32 @@
       color: #3b2e19;
       margin-top: 2rem;
     }
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin: 1.5rem 0;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <img src="free-palestine-banner.png" alt="Free Palestine Banner"/>
     <img src="gaza-character.png" alt="Gaza Meme Coin Character"/>
     <h1>🕊️ Gaza Coin ($GAZA)</h1>
     <p>A meme coin with a mission. Built on hope, resistance, and solidarity. Every trade is a voice for the voiceless. Join the decentralized movement.</p>
+    
+    <div class="socials">
+      <a href="https://twitter.com/GazaCoin" target="_blank" class="btn" style="background:#000000;color:#fff;">Follow us on Twitter</a>
+      <a href="https://t.me/GazaCoin" target="_blank" class="btn" style="background:#229ED9;color:#fff;">Join Telegram</a>
+    </div>
+
     <div style="text-align:center;">
       <a href="#" class="btn buy-btn">Coming Soon</a>
       <a href="#" class="btn outline-btn">View Chart (Soon)</a>
     </div>
+    
     <h2>💰 Tokenomics</h2>
     <ul>
       <li>Total Supply: 1,000,000 $GAZA</li>
@@ -85,10 +107,6 @@
     <p>Gaza Coin was created to empower supporters of justice and peace with a real, decentralized tool for fundraising, visibility, and change.</p>
     <h3>How to Buy</h3>
     <p>$GAZA is not live yet. Once launched, you’ll be able to find it on platforms like Dexscreener and Raydium. Stay tuned!</p>
-    <div style="text-align:center;">
-      <a href="https://twitter.com/GazaCoin" target="_blank">Twitter</a> |
-      <a href="https://t.me/GazaCoin" target="_blank">Telegram</a>
-    </div>
     <footer>© 2025 Gaza Coin. Powered by people, for the people.</footer>
   </div>
 </body>
