--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(to bottom, #f1e3c3, #d6b177, #aa682c);
-      color: #231709;
+      background: #f9f6f1;
+      color: #222;
       padding: 2rem;
     }
     .container {
       max-width: 800px;
       margin: auto;
-      background: #f5e6cc;
+      background: #ffffff;
       border: 2px solid #cd9b4c;
       border-radius: 20px;
       padding: 2rem;
@@ -27,7 +27,7 @@
       color: #aa682c;
     }
     p, ul {
-      color: #3b2e19;
+      color: #333;
     }
     .btn {
       display: inline-block;
@@ -39,14 +39,14 @@
     }
     .buy-btn {
       background: #cd9b4c;
-      color: #231709;
+      color: #222;
     }
     .buy-btn:hover {
       background: #b8823c;
     }
     .outline-btn {
       border: 2px solid #aa682c;
-      color: #231709;
+      color: #222;
     }
     .social-btn {
       background: #2d3748;
@@ -64,7 +64,7 @@
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #3b2e19;
+      color: #333;
       margin-top: 2rem;
     }
     .socials {
@@ -78,13 +78,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="free-palestine-banner.png" alt="Free Palestine Banner"/>
-    <img src="gaza-character.png" alt="Gaza Meme Coin Character"/>
+    
+    <img src="gaza-character.png" alt="Gaza Meme Coin Character" style="width: 300px; max-width: 100%;"/>
     <h1>🕊️ Gaza Coin ($GAZA)</h1>
     <p>A meme coin with a mission. Built on hope, resistance, and solidarity. Every trade is a voice for the voiceless. Join the decentralized movement.</p>
     
     <div class="socials">
-      <a href="https://twitter.com/GazaCoin" target="_blank" class="btn" style="background:#000000;color:#fff;">Follow us on Twitter</a>
+      <a href="https://twitter.com/GazaCoin" target="_blank" class="btn" style="background:#000000;color:#fff;">Twitter</a>
       <a href="https://t.me/GazaCoin" target="_blank" class="btn" style="background:#229ED9;color:#fff;">Join Telegram</a>
     </div>
 
