--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: #f9f6f1;
+      background: #e5cc94;
       color: #222;
       padding: 2rem;
     }
