--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .container {
       max-width: 800px;
       margin: auto;
-      background: #ffffff;
+      background: #e5cc94;
       border: 2px solid #cd9b4c;
       border-radius: 20px;
       padding: 2rem;
