--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Orbitron', sans-serif; font-weight: 500;
       background: #e5cc94;
-      color: #222;
+      color: #3a2d1e;
       padding: 2rem;
     }
     .container {
       max-width: 800px;
       margin: auto;
       background: #e5cc94;
-      border: 2px solid #cd9b4c;
+      border: 2px solid #c1a24f;
       border-radius: 20px;
       padding: 2rem;
     }
@@ -27,7 +27,7 @@
       color: #aa682c;
     }
     p, ul {
-      color: #333;
+      color: #4a3d24;
     }
     .btn {
       display: inline-block;
@@ -39,14 +39,14 @@
     }
     .buy-btn {
       background: #cd9b4c;
-      color: #222;
+      color: #3a2d1e;
     }
     .buy-btn:hover {
       background: #b8823c;
     }
     .outline-btn {
       border: 2px solid #aa682c;
-      color: #222;
+      color: #3a2d1e;
     }
     .social-btn {
       background: #2d3748;
@@ -64,7 +64,7 @@
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #333;
+      color: #4a3d24;
       margin-top: 2rem;
     }
     .socials {
