--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
     <p>Gaza Coin was created to empower supporters of justice and peace with a real, decentralized tool for fundraising, visibility, and change.</p>
     <h3>How to Buy</h3>
     <p>$GAZA is not live yet. Once launched, you’ll be able to find it on platforms like Dexscreener and Raydium. Stay tuned!</p>
+    
+    <h3>Support Gaza Relief</h3>
+    <p>
+      A portion of all $GAZA activity supports vetted humanitarian charities.
+      If you’d like to contribute directly, here are ways you can help:
+    </p>
+    <ul>
+      <li>🕊️ <strong>On-Chain:</strong> 10% of tokens are locked in a charity wallet.</li>
+      <li>🤝 <strong>Off-Chain Donations:</strong> You can also donate directly to <a href="https://www.pcrf.net/" target="_blank" style="color:#3a2d1e; text-decoration:underline;">PCRF</a>, <a href="https://www.unrwa.org/" target="_blank" style="color:#3a2d1e; text-decoration:underline;">UNRWA</a>, or <a href="https://www.irusa.org/middle-east/gaza/" target="_blank" style="color:#3a2d1e; text-decoration:underline;">IRUSA</a>.</li>
+      <li>📣 <strong>Spread the Word:</strong> Awareness is a powerful donation too.</li>
+    </ul>
+
     <footer>© 2025 Gaza Coin. Powered by people, for the people.</footer>
   </div>
 </body>
