--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <p>A meme coin with a mission. Built on hope, resistance, and solidarity. Every trade is a voice for the voiceless. Join the decentralized movement.</p>
     
     <div class="socials">
-      <a href="https://twitter.com/GazaCoin" target="_blank" class="btn" style="background:#000000;color:#fff;">Twitter</a>
-      <a href="https://t.me/GazaCoin" target="_blank" class="btn" style="background:#229ED9;color:#fff;">Join Telegram</a>
+      <a href="https://twitter.com/thegazaCoin" target="_blank" class="btn" style="background:#000000;color:#fff;">Twitter</a>
+      <a href="https://t.me/thegazaCoin" target="_blank" class="btn" style="background:#229ED9;color:#fff;">Join Telegram</a>
     </div>
 
     <div style="text-align:center;">
